--- a/index.html
+++ b/index.html
@@ -7,14 +7,63 @@
     <title>Solar System</title>
     <style>
         body {
-            margin: 0
+            margin: 0;
+            overflow: hidden;
+        }
+        canvas {
+            display: block;
+        }
+        #deletePlanetButton {
+            position: absolute;
+            top: 40px;
+            left: 5px;
+        }
+        #restorePlanetButton {
+            position: absolute;
+            top: 60px;
+            left: 5px;
+        }
+        .planetCheckbox {
+            display: inline-block;
+            margin-right: 10px;
         }
     </style>
 </head>
 <body>
-    <!-- <div id="speed-control">
-        <input type="range" min="0.1" max="1" step="0.1" value="0.5" id="speed-slider">
-    </div>       -->
+    <div id="planetList">
+        <label class="planetCheckbox">
+          <input type="checkbox" name="planet" value="mercury">Mercury
+        </label>
+        <label class="planetCheckbox">
+          <input type="checkbox" name="planet" value="venus">Venus
+        </label>
+        <label class="planetCheckbox">
+          <input type="checkbox" name="planet" value="earth">Earth
+        </label>
+        <label class="planetCheckbox">
+            <input type="checkbox" name="planet" value="jupiter">Jupiter
+        </label>
+        <label class="planetCheckbox">
+            <input type="checkbox" name="planet" value="mars">Mars
+        </label>
+        <label class="planetCheckbox">
+            <input type="checkbox" name="planet" value="neptune">Neptune
+        </label>
+        <label class="planetCheckbox">
+            <input type="checkbox" name="planet" value="pluto">Pluto
+        </label>
+        <label class="planetCheckbox">
+            <input type="checkbox" name="planet" value="saturn">Saturn
+        </label>
+        <label class="planetCheckbox">
+            <input type="checkbox" name="planet" value="stars">Stars
+        </label>  
+        <label class="planetCheckbox">
+            <input type="checkbox" name="planet" value="sun">Sun
+        </label>
+    </div>
+    <button id="restorePlanetButton">Khôi phục hành tinh</button>
+    <button id="deletePlanetButton">Hủy hành tinh</button>
     <script src="./js/scripts.js" type="module"></script>
 </body>
 </html>
